# ChangeLog for sys-process/psmisc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/psmisc/ChangeLog,v 1.131 2012/06/19 06:48:54 ssuominen Exp $

  19 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> psmisc-22.16.ebuild:
  ppc64 stable wrt #420047

  11 Jun 2012; Agostino Sarubbo <ago@gentoo.org> psmisc-22.16.ebuild:
  Stable for amd64, wrt bug #420047

  09 Jun 2012; Markus Meier <maekke@gentoo.org> psmisc-22.16.ebuild:
  arm stable, bug #420047

  07 Jun 2012; Brent Baude <ranger@gentoo.org> psmisc-22.16.ebuild:
  Marking psmisc-22.16 ppc for bug 420047

  07 Jun 2012; Johannes Huber <johu@gentoo.org> psmisc-22.16.ebuild:
  Stable for x86, wrt bug #420047

  07 Jun 2012; Jeroen Roovers <jer@gentoo.org> psmisc-22.16.ebuild:
  Stable for HPPA (bug #420047).

*psmisc-22.17 (07 Jun 2012)

  07 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> +psmisc-22.17.ebuild:
  Version bump.

  17 May 2012; Mike Frysinger <vapier@gentoo.org>
  +files/psmisc-22.16-fuser-pic.patch, psmisc-22.16.ebuild:
  Fix TEXTRELs when building fuser as a PIE #394443 by Attila Tóth.

*psmisc-22.16 (12 Mar 2012)

  12 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +psmisc-22.16.ebuild:
  Version bump.

  31 Jan 2012; Mike Frysinger <vapier@gentoo.org> psmisc-22.15.ebuild:
  Drop autotool usage since we no longer patch autotool files.

*psmisc-22.15 (28 Jan 2012)

  28 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> +psmisc-22.15.ebuild,
  +files/psmisc-22.15-COMM_LEN-to-18.patch:
  Version bump. Backport -COMM_LEN-to-18.patch from git to prevent pstree
  crashing.

  26 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
  -files/psmisc-22.5-no-nls.patch, -psmisc-22.12.ebuild,
  -files/psmisc-22.12-peekfd.patch, -psmisc-22.13.ebuild:
  old

  26 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> psmisc-22.14.ebuild:
  ppc64 stable wrt #392641

  04 Jan 2012; Brent Baude <ranger@gentoo.org> psmisc-22.14.ebuild: