@@ -8,20 +8,22 @@ DIST psmisc-22.14.tar.gz 382024 RMD160 56a1b2ab415013ac18fa8a49b9cd67dc1f735822 
 DIST psmisc-22.15.tar.gz 390766 RMD160 572c738202061f60ab965ba8f7e0b024d385d647 SHA1 06f507d889afab70ac7ff20fbd419ca2ffcf90c0 SHA256 5fbe908618d7ccf08164a733a361ce9823355fd0da754e53982d842158973754
 DIST psmisc-22.16.tar.gz 465138 RMD160 3f51ae4d93082111cd649513ac85fbc6cfb4586e SHA1 27f1c8deab06e79101af1914ff81a9d561f2fcfe SHA256 ae426d7238e5353fdf51b1d313897c2bbed0023e66e5b4af2be9cd03d87a9d01
 DIST psmisc-22.17.tar.gz 500655 RMD160 a082e51ddaf07580fa4a38d8922fc4c02592d9fc SHA1 5d400710cf030bf7396aec40f53e933942ec8b4a SHA256 34e70139fd0d532eba00de408f2f4843a5fca93278de99db6eb04f3850c6be0d
+DIST psmisc-22.18.tar.gz 492705 RMD160 b38a1b3d007d64a018ef06883a4d23387469de11 SHA1 964f6daa0950b128a0840d9df4dc0b671730a83c SHA256 afa3a44be18db403f6f631d448f89d9d66304c1590e0cf25583a2b65bc0893d0
 EBUILD psmisc-22.14.ebuild 1695 RMD160 53f776d73f61855e088789e0f15cc06ce436cba3 SHA1 ca356ac21b43c7b899a3d8d83c3f1eaa95fe5b23 SHA256 5bc21e953ac9f7b50239668ee09880568fce744a6b766483d4fdc3dfc7397241
 EBUILD psmisc-22.15.ebuild 1384 RMD160 5e486fdb80df6fa78d0e01616b00091ea6d9d97c SHA1 e71fec6a2b4ac128874cc3b750375c646af49592 SHA256 044411a7682dfe0ac748d233aea2948413d371aaead81bfe59652fd00d936bac
 EBUILD psmisc-22.16.ebuild 1417 RMD160 3339506c80f91bc85a6ec6ab4ed1a6115151ba96 SHA1 a38a97fdc2fb17895a5d9158ea8dbc2bfb8875ac SHA256 d45bbbdcb506df0aecaa857fc229b220335c590a34ef6a9b439a1b364a3500bd
 EBUILD psmisc-22.17.ebuild 1327 RMD160 64c7151cb2912f149c16a9f89c3fb3a30af32abd SHA1 e2462a7457a62c96253029bcd26ff96bbf0e0ee1 SHA256 bd4e75ab55ebe651c472c58c6581dc6a1b633635a851239dda7eabc2aaf5c266
-MISC ChangeLog 21712 RMD160 03eab97abcef3fe0c25f5867b8b967e9b79b1bae SHA1 69b4ca59133e4a5a6cbc441e6c7405b2d6e34b1b SHA256 ce034d7277fe7c47dc2f16fa90d4ec32ea43ac98e2edc798897e46f792a959e4
+EBUILD psmisc-22.18.ebuild 1327 RMD160 7db23b611efc0ec098c5a117f6d67cd6612d581a SHA1 878faf123e882a5da81c3fc749aed1574f6aa159 SHA256 503bddb2ff8b90c2c26d840b59ecb03f5eb7e5785599748f2c93e11c44c6b4f0
+MISC ChangeLog 21834 RMD160 0c11453d2a1dc485e7ae7dd3aeb66380f340ce9e SHA1 0a06b898867fb2786e3937fef62b32d18bd260dd SHA256 4956936823c897b7baab952dbb719f57235c4dc548e5e3997c7cbbecb86ccfaa
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJP4B/HAAoJEEdUh39IaPFNCR8H/030FGC5a91VU+mEGyZuLs7X
-DkL1hc+sDZbBJt6S0FfuUtoORaehKVimZLiBelJm/rSbye+h5Ae06T3qYjBPy8Z3
-HYkUw03zEkyKyJFLFyJ92q7xEp870G+bBKw1Bfmo+C/YniUSaMUj3aafWOpbtsmI
-FPMXXyd5kKZCeqX+h8fBOLZQcaN6HmLEkxd6sNYym1dZwL7u/9ltiVMREFaPnV2K
-7nJjQCnrF6tb+av4oFrxPirJ80UQgBWau27xjzlGuUpMPyZR1+HU3YcNuZMtysO0
-w9MPf5qf+VgbHMKxn2NZTqGzpS7wXy5VCOKZpS/CkbaUALaCrR346T30ELszd24=
-=1nYJ
+iQEcBAEBAgAGBQJP4CA5AAoJEEdUh39IaPFNEAgH+wU68qDWsWgNSYb8y6mWhE1d
+gy0aqcsTHoQ99mU2DIycxKEe6hYWMvCBBArZQ8KxRFXyVPJE4HrYlOdYuWm2g1bC
+/xoLMAowrTLOV9qcjxKVxXvwovhr5bM0wuxcTWlUgllui/TQ8ZwOw9R5tKF/miLb
+MU0e9aKnq4v492PCc4XtqG05XFO9dVdIY9Gwroy/CXgc8OsnKW3nBfw+8WAtKjEZ
+HTPDoVG1/h/VPlqDF/P3ME/AJRBOhqODmAOx1QlFLmbncVzzNAy4fHT1bYx+VNeJ
+Cg2a086tmsCCvN+zPo5/sc/dSqsYsRSXmxVj8fQGVPcmvafZsTLty9rW8FQkFxQ=
+=SKzu
 -----END PGP SIGNATURE-----
