@@ -1,6 +1,11 @@
 # ChangeLog for sys-process/psmisc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/psmisc/ChangeLog,v 1.131 2012/06/19 06:48:54 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/psmisc/ChangeLog,v 1.132 2012/06/19 06:50:48 ssuominen Exp $
+
+*psmisc-22.18 (19 Jun 2012)
+
+  19 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> +psmisc-22.18.ebuild:
+  Version bump.
 
   19 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> psmisc-22.16.ebuild:
   ppc64 stable wrt #420047
